:boom: updated env

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.env*
 .idea
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
@@ -28,8 +29,8 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
-.env
-.env
+.env.development
+.env.development
 
 # vercel
 .vercel
