--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:push": "npx prisma db push"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.385.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/embed": "^2.5.3",
@@ -68,7 +69,9 @@
     "concurrently": "^8.0.1",
     "contentlayer": "^0.3.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.9",
     "lucide-react": "^0.92.0",
+    "mustache": "^4.2.0",
     "next": "13.3.2-canary.13",
     "next-auth": "4.22.1",
     "next-contentlayer": "^0.3.1",
@@ -95,7 +98,9 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/mustache": "^4.2.2",
     "@types/node": "^18.16.0",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.14",
